AG-227 - fixed alignment

--- a/packages/ag-grid-enterprise/src/rowNumbers/rowNumbers.css
+++ b/packages/ag-grid-enterprise/src/rowNumbers/rowNumbers.css
@@ -7,6 +7,7 @@
     color: var(--ag-header-text-color);
     font-size: var(--ag-header-font-size);
     font-family: var(--ag-header-font-family);
+    justify-content: end;
     font-weight: var(--ag-header-font-weight);
 }
 
